package admin.web;

import admin.service.posts.PostsService;
import admin.web.dto.PostsResponseDto;
import admin.web.dto.PostsSaveRequestDto;
import admin.web.dto.PostsUpdateRequestDto;
import lombok.RequiredArgsConstructor;
import org.springframework.web.bind.annotation.*;

@RequiredArgsConstructor
@RestController
public class PostsApiController {

    private final PostsService postsService;

    @PostMapping("/api/v1/posts")
    public Long save(@RequestBody PostsSaveRequestDto requestDto){
        return postsService.save(requestDto);
    }

    @PutMapping("/api/v1/posts/{id}")
    public Long update(@PathVariable Long id, @RequestBody PostsUpdateRequestDto requestDto){
        return postsService.update(id, requestDto);
    }

    public PostsResponseDto findById(@PathVariable Long id){
        return postsService.findById(id);
    }
}
